@@ -114,9 +114,9 @@ Cisco 3500XL Series          |    XX    |    XX    |    XX    |    --    |   -- 
 -----------------------------|----------|----------|----------|----------|--------|
 Cisco 3550                   |    XX    |    XX    |    XX    |    XX    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
-Cisco 3560                   |    XX    |    XX    |    XX    |    ??    |   ??   |
+Cisco 3560                   |    XX    |    XX    |    XX    |    XX    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
-Cisco 3750                   |    XX    |    XX    |    XX    |    ??    |   ??   |
+Cisco 3750                   |    XX    |    XX    |    XX    |    XX    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
 Cisco 4500 Series            |    XX    |    XX    |    XX    |    XX    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
